--- a/package.json
+++ b/package.json
@@ -25,70 +25,70 @@
     "dns": "empty"
   },
   "dependencies": {
-    "@angular/animations": "~12.2.2",
-    "@angular/cdk": "^12.2.2",
-    "@angular/common": "~12.2.2",
-    "@angular/compiler": "~12.2.2",
-    "@angular/core": "~12.2.2",
-    "@angular/fire": "^6.1.5",
-    "@angular/flex-layout": "^12.0.0-beta.34",
-    "@angular/forms": "~12.2.2",
-    "@angular/material": "^12.2.2",
-    "@angular/platform-browser": "~12.2.2",
-    "@angular/platform-browser-dynamic": "~12.2.2",
-    "@angular/router": "~12.2.2",
-    "@fortawesome/angular-fontawesome": "^0.9.0",
-    "@nativescript/angular": "^12.0.6",
+    "@angular/animations": "~14.3.0",
+    "@angular/cdk": "^14.2.7",
+    "@angular/common": "~14.3.0",
+    "@angular/compiler": "~14.3.0",
+    "@angular/core": "~14.3.0",
+    "@angular/fire": "^7.4.1",
+    "@angular/forms": "~14.3.0",
+    "@angular/material": "^14.2.7",
+    "@angular/platform-browser": "~14.3.0",
+    "@angular/platform-browser-dynamic": "~14.3.0",
+    "@angular/router": "~14.3.0",
+    "@fortawesome/angular-fontawesome": "^0.11.1",
+    "@nativescript/angular": "^14.2.8",
     "@nativescript/core": "^8.0.8",
     "@nativescript/theme": "^3.0.1",
-    "@ngx-translate/core": "^13.0.0",
-    "@ngx-translate/http-loader": "^6.0.0",
-    "class-validator": "^0.13.1",
-    "core-js": "^3.16.2",
+    "@ngx-translate/core": "^14.0.0",
+    "@ngx-translate/http-loader": "^7.0.0",
+    "bootstrap": "^5.3.2",
+    "class-validator": "^0.14.0",
+    "core-js": "^3.36.0",
     "epubjs": "^0.3.90",
-    "firebase": "^8.10.0",
+    "firebase": "^9.23.0",
     "luxon": "^2.0.2",
     "messageformat": "^2.3.0",
-    "nativescript-plugin-firebase": "^10.6.3",
+    "nativescript-plugin-firebase": "^5.2.0",
     "nativescript-pro-ui": "^3.4.1",
-    "ngx-translate-messageformat-compiler": "^4.10.0",
+    "ngx-translate-messageformat-compiler": "^5.1.0",
     "postcss": "^8.3.11",
     "reflect-metadata": "~0.1.13",
     "rxjs": "^7.3.0",
     "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "^0.12.0"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "0.1202.2",
-    "@angular-devkit/build-angular": "^12.1.1",
-    "@angular/cli": "~12.2.2",
-    "@angular/compiler-cli": "~12.2.2",
-    "@angular/language-service": "~12.2.2",
+    "@angular-devkit/architect": "0.1402.13",
+    "@angular-devkit/build-angular": "^14.2.13",
+    "@angular/cli": "^14.2.13",
+    "@angular/compiler-cli": "~14.3.0",
+    "@angular/language-service": "~14.3.0",
     "@nativescript/schematics": "^11.2.0",
     "@nativescript/tslint-rules": "~0.0.5",
     "@nativescript/types": "^8.0.1",
-    "@nativescript/webpack": "^4.1.0",
-    "@ngneat/spectator": "^8.0.3",
-    "@ngtools/webpack": "^12.2.2",
+    "@nativescript/webpack": "^5.0.18",
+    "@ngneat/spectator": "^16.0.0",
+    "@ngtools/webpack": "^14.2.13",
     "@types/faker": "^5.5.8",
-    "@types/jest": "^27.0.1",
+    "@types/jest": "^28.1.8",
     "@types/luxon": "^2.0.0",
     "@types/node": "^16.6.2",
-    "codelyzer": "^6.0.2",
+    "codelyzer": "^5.2.2",
     "copy-webpack-plugin": "^9.0.1",
     "faker": "^5.5.3",
-    "firebase-tools": "^9.16.5",
+    "firebase-tools": "^11.30.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^8.1.2",
-    "inquirer-autocomplete-prompt": "^1.4.0",
+    "inquirer-autocomplete-prompt": "^2.0.1",
     "jest": "^27.0.6",
-    "jest-preset-angular": "^9.0.6",
-    "open": "^8.2.1",
-    "protractor": "~7.0.0",
+    "jest-preset-angular": "^8.4.0",
+    "open": "^9.1.0",
+    "protractor": "^7.0.0",
     "ts-jest": "^27.0.5",
     "ts-node": "^10.2.1",
     "tslint": "^6.1.0",
-    "typescript": "~4.3.5"
+    "typescript": "~4.6.4"
   },
   "jest": {
     "preset": "jest-preset-angular",
